<resources>
    <string name="app_name">RandomDrinker</string>

    <string name="label_min_value">Minimal value</string>
    <string name="label_max_value">Maximal value</string>
    <string name="label_choose_the_sound">Choose the sound</string>
    <string name="label_instant_chance">Instant chance %</string>
    <string name="button_lets_drink">Let`s DRINK !</string>
    <string name="test_sound">test sound</string>
    <string name="label_initial_sound">Initial sound</string>
    <string name="label_hint">Show drink time</string>
    <string name="label_vibration">Vibration</string>
    <string name="label_splash">Splash</string>
    <string name="label_background">Run in background</string>

    <string-array name="soundNames">
        <item>bell</item>
        <item>rock</item>
        <item>dwayne</item>
        <item>tube</item>
        <item>fart</item>
    </string-array>

</resources>