<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/dark_purple"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <RelativeLayout
        android:id="@+id/relativeLayoutMin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:layout_marginBottom="10dp"
            android:background="@drawable/boarder"
            android:padding="20dp"
            android:paddingLeft="5dp"
            android:textColor="@color/white"
            android:text="10"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_centerHorizontal="true"
            android:background="@color/dark_purple"
            android:text="@string/label_min_value"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutMax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/boarder"
            android:padding="20dp"
            android:inputType="number"
            android:textColor="@color/white"
            android:paddingLeft="5dp"
            android:text="17"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_centerHorizontal="true"
            android:background="@color/dark_purple"
            android:text="@string/label_max_value"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutInstance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutMin">

        <EditText
            android:id="@+id/editTextInstance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/boarder"
            android:padding="20dp"
            android:inputType="number"
            android:paddingLeft="5dp"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_centerHorizontal="true"
            android:background="@color/dark_purple"
            android:text="@string/label_instant_chance"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutSound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutMax">

        <Spinner
            android:id="@+id/spinnerSounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/boarder"
            android:padding="24dp"
            android:entries="@array/soundNames"
            android:paddingLeft="5dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_purple"
            android:layout_marginTop="3dp"
            android:layout_centerHorizontal="true"
            android:text="@string/label_choose_the_sound"
            android:textColor="@color/white" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonTestSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_sound"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:backgroundTint="@color/purple"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayoutSound"
        app:layout_constraintStart_toStartOf="@+id/relativeLayoutSound"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutSound" />

    <RelativeLayout
        android:id="@+id/relativeLayoutInitial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:background="@drawable/boarder"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutInstance">

        <CheckBox
            android:id="@+id/checkBoxInitialSound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="5dp"
            android:checked="true"
            android:paddingRight="5dp"
            android:text="@string/label_initial_sound"
            android:textColor="@color/white" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonToTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="20dp"
        android:text="@string/button_lets_drink"
        android:textSize="22sp"
        android:textStyle="bold"
        android:backgroundTint="@color/purple"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>